<resources>
    <string name="app_name">hospital</string>

    <string name="name">Name</string>
    <string name="entrar">Entrar</string>
    <string name="logo">logo</string>
    <string name="planta">PLANTA</string>
    <string name="a_adir_paciente">Añadir Paciente</string>
    <color name="white">#ffffff</color>
    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="informaci_n_del_paciente">Información del paciente</string>
    <string name="medicaci_n">Medicación</string>
    <string name="constantes">Constantes</string>
    <string name="dietas">Dietas</string>
    <string name="obtener_nombre_del_paciente">Obtener nombre del paciente</string>
    <string name="a_adir">Añadir</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="textview">TextView</string>

    <string name="button">Button</string>
    <string name="title_activity_menu__m__ui">menu_M_UI</string>


</resources>
